@@ -405,7 +405,7 @@
                         <param name="content" value="$VAR[Defs_VideoInfo_Extras]" />
                         <param name="infolabel" value="false" />
                         <param name="itemwidth" value="606.66" />
-                        <param name="fallbackimage" value="DefaultVideo.png" />
+                        <param name="fallbackimage" value="common/playring.png" />
                         <param name="include_onclick" value="true" />
                         <param name="onclick" value="SetProperty(TrailerPlaying,9505,Home)" />
                         <param name="onclick2" value="PlayMedia($INFO[ListItem.FileNameAndPath],1)" />
