@@ -246,7 +246,7 @@
                                 <control type="image">
                                     <bordersize>10</bordersize>
                                     <aspectratio aligny="center" scalediffuse="false">scale</aspectratio>
-                                    <texture background="true" diffuse="diffuse/mediainfo.png">$INFO[Window.Property(next.thumb)]</texture>
+                                    <texture background="true" diffuse="diffuse/mediainfo.png">$INFO[Window.Property(previous.thumb)]</texture>
                                 </control>
                             </control>
                             <control type="image">
