@@ -1,3 +1,7 @@
+[B]0.9.14[/B]
+Fix bug in postplay nextup showing same thumb
+Add play icon to videoinfo extras
+
 [B]0.9.13[/B]
 Fixes for plot overlay in extended info actor
 Update rottentomatoes to fit new RT brand identity
